Add small improvements