@@ -1,10 +1,10 @@
 package com.example.demo.service.ai.llm;
 
 import com.example.demo.model.ChatMessage;
-import com.fasterxml.jackson.databind.JsonNode;
+import com.example.demo.model.dto.GroqMessage;
+import com.example.demo.model.dto.GroqRequest;
+import com.example.demo.model.dto.GroqResponse;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -17,49 +17,42 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.util.List;
 
-/**
- * GROQ LLM PROVIDER
- * Responsibility: Sends text to Groq and gets a witty response.
- */
 @Slf4j
 @Service
 @RequiredArgsConstructor
-@ConditionalOnProperty(name = "ai.provider", havingValue = "")
+@ConditionalOnProperty(name = "ai.provider", havingValue = "groq") // Fixed value
 public class GroqLlmProvider implements LlmProvider {
 
     private final ObjectMapper mapper;
 
-    // Create one client to reuse
+    // Create one client to reuse (Java 21 best practice)
     private final HttpClient client = HttpClient.newHttpClient();
 
-    // 1. URL for Groq
     private static final String LLM_URL = "https://api.groq.com/openai/v1/chat/completions";
-
-    // 2. Model hosted on Groq (Free)
     private static final String LLM_MODEL = "llama-3.3-70b-versatile";
 
     @Value("${groq.api.key}")
     private String apiKey;
 
+
     @Override
     public String generateAnswer(List<ChatMessage> history) {
         try {
-            log.info("Sending prompt to Groq (Llama 3)...");
+            // STEP 1: Convert your Domain Objects (ChatMessage) to DTOs (GroqMessage)
+            List<GroqMessage> apiMessages = history.stream()
+                    .map(msg -> new GroqMessage(msg.role(), msg.content()))
+                    .toList();
 
-            ObjectNode payload = mapper.createObjectNode();
-            payload.put("model", LLM_MODEL);
-            payload.put("temperature", 0.6);
-            payload.put("stream", false);
+            // STEP 2: Create the Request Object
+            GroqRequest requestPayload = new GroqRequest(
+                    LLM_MODEL,
+                    0.6,
+                    false,
+                    apiMessages
+            );
 
-            // Convert List<ChatMessage> -> JSON Array
-            ArrayNode messagesArray = payload.putArray("messages");
-            for (ChatMessage msg : history) {
-                messagesArray.addObject()
-                        .put("role", msg.role())
-                        .put("content", msg.content());
-            }
-
-            String jsonBody = mapper.writeValueAsString(payload);
+            // STEP 3: Auto-Magic Serialization (Object -> JSON String)
+            String jsonBody = mapper.writeValueAsString(requestPayload);
 
             HttpRequest request = HttpRequest.newBuilder()
                     .uri(URI.create(LLM_URL))
@@ -68,7 +61,7 @@ public class GroqLlmProvider implements LlmProvider {
                     .POST(HttpRequest.BodyPublishers.ofString(jsonBody))
                     .build();
 
-            // Blocking call (since LlmProvider interface defines it as blocking)
+            // STEP 4: Send Request
             HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
             if (response.statusCode() != 200) {
@@ -76,8 +69,12 @@ public class GroqLlmProvider implements LlmProvider {
                 return "I am sorry, Groq is offline.";
             }
 
-            JsonNode root = mapper.readTree(response.body());
-            return root.path("choices").get(0).path("message").path("content").asText();
+            // STEP 5: Auto-Magic Deserialization (JSON String -> Object)
+            // We read the JSON directly into our Record structure
+            GroqResponse responseObj = mapper.readValue(response.body(), GroqResponse.class);
+
+            // Access data using standard Java methods (no more .path("choices").get(0)...)
+            return responseObj.choices().getFirst().message().content();
 
         } catch (Exception e) {
             log.error("Groq Exception", e);
